# MLOps-

./: README.md  pyproject.toml  requirements.txt  setup.py  template.py
src/mlProject.egg-info/: PKG-INFO  SOURCES.txt
